@@ -6,31 +6,28 @@ import com.lushprojects.circuitjs1.client.util.Locale;
 
 // Iain Sharp, Feb 2017
 
-
 public class DarlingtonElm extends CompositeElm {
 
     private Polygon rectPoly, arrowPoly;
     private Point rect[], coll[], emit[], base, coll2[];
-    
 
     private int pnp; // +1 for NPN, -1 for PNP;
     private double curcount_c, curcount_e, curcount_b;
     private static String modelString = "NTransistorElm 1 2 4\rNTransistorElm 4 2 3";
-    private static int[] modelExternalNodes = {1, 2, 3};
-    
+    private static int[] modelExternalNodes = { 1, 2, 3 };
+
     DarlingtonElm(int xx, int yy, boolean pnpflag) {
 	super(xx, yy, modelString, modelExternalNodes);
 	pnp = (pnpflag) ? -1 : 1;
-	((TransistorElm) compElmList.get(0)).pnp=pnp;
-	((TransistorElm) compElmList.get(1)).pnp=pnp;
+	((TransistorElm) compElmList.get(0)).pnp = pnp;
+	((TransistorElm) compElmList.get(1)).pnp = pnp;
 	noDiagonal = true;
-	
+
     }
-    
 
     public DarlingtonElm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 	super(xa, ya, xb, yb, f, st, modelString, modelExternalNodes);
-	pnp = new Integer(st.nextToken()).intValue();
+	pnp = Integer.valueOf(st.nextToken()).intValue();
 	noDiagonal = true;
     }
 
@@ -38,16 +35,15 @@ public class DarlingtonElm extends CompositeElm {
 	super.reset();
 	curcount_c = curcount_e = curcount_b = 0;
     }
-    
+
     public int getDumpType() {
 	return 400;
     }
 
     public String dump() {
-	return super.dump()+" "+pnp;
+	return super.dump() + " " + pnp;
     }
 
-    
     void draw(Graphics g) {
 	setBbox(point1, point2, 16);
 	setPowerColor(g, true);
@@ -94,9 +90,6 @@ public class DarlingtonElm extends CompositeElm {
 	drawPosts(g);
     }
 
-
-
-
     void getInfo(String arr[]) {
 	arr[0] = Locale.LS("darlington pair") + " (" + ((pnp == -1) ? "PNP)" : "NPN)");
 	double vbc = volts[0] - volts[1];
@@ -118,33 +111,30 @@ public class DarlingtonElm extends CompositeElm {
 	coll2 = newPointArray(2);
 	emit = newPointArray(2);
 	interpPoint2(point1, point2, coll[0], emit[0], 1, hs2);
-	coll2[0]=interpPoint(point1, point2, 1, hs2-5*dsign*pnp);
+	coll2[0] = interpPoint(point1, point2, 1, hs2 - 5 * dsign * pnp);
 	// calc rectangle edges
 	rect = newPointArray(4);
 	interpPoint2(point1, point2, rect[0], rect[1], 1 - 16 / dn, hs);
 	interpPoint2(point1, point2, rect[2], rect[3], 1 - 13 / dn, hs);
 	// calc points where collector/emitter leads contact rectangle
 	interpPoint2(point1, point2, coll[1], emit[1], 1 - 13 / dn, 6 * dsign * pnp);
-	coll2[1]=interpPoint(point1, point2, 1-13/dn, dsign*pnp);
+	coll2[1] = interpPoint(point1, point2, 1 - 13 / dn, dsign * pnp);
 	// calc point where base lead contacts rectangle
 	base = new Point();
 	interpPoint(point1, point2, base, 1 - 16 / dn);
 	// rectangle
 	rectPoly = createPolygon(rect[0], rect[2], rect[3], rect[1]);
 	// arrow
-	    if (pnp == 1)
-		arrowPoly = calcArrow(emit[1], emit[0], 8, 4);
-	    else {
-		Point pt = interpPoint(point1, point2, 1-11/dn, -5*dsign*pnp);
-		arrowPoly = calcArrow(emit[0], pt, 8, 4);
-	    }
+	if (pnp == 1)
+	    arrowPoly = calcArrow(emit[1], emit[0], 8, 4);
+	else {
+	    Point pt = interpPoint(point1, point2, 1 - 11 / dn, -5 * dsign * pnp);
+	    arrowPoly = calcArrow(emit[0], pt, 8, 4);
+	}
 	setPost(0, point1);
-	setPost(1,coll[0]);
-	setPost(2,emit[0]);
+	setPost(1, coll[0]);
+	setPost(2, emit[0]);
 
     }
-
-
-    
 
 }
