@@ -33,52 +33,62 @@ class SCRElm extends CircuitElm {
     final int inode = 3;
     final int FLAG_GATE_FIX = 1;
     Diode diode;
-    
+
     public SCRElm(int xx, int yy) {
 	super(xx, yy);
 	setDefaults();
 	flags |= FLAG_GATE_FIX;
 	setup();
     }
-    public SCRElm(int xa, int ya, int xb, int yb, int f,
-		  StringTokenizer st) {
+
+    public SCRElm(int xa, int ya, int xb, int yb, int f, StringTokenizer st) {
 	super(xa, ya, xb, yb, f);
 	setDefaults();
 	try {
-	    lastvac = new Double(st.nextToken()).doubleValue();
-	    lastvag = new Double(st.nextToken()).doubleValue();
+	    lastvac = Double.valueOf(st.nextToken()).doubleValue();
+	    lastvag = Double.valueOf(st.nextToken()).doubleValue();
 	    volts[anode] = 0;
 	    volts[cnode] = -lastvac;
 	    volts[gnode] = -lastvag;
-	    triggerI = new Double(st.nextToken()).doubleValue();
-	    holdingI = new Double(st.nextToken()).doubleValue();
-	    gresistance = new Double(st.nextToken()).doubleValue();
+	    triggerI = Double.valueOf(st.nextToken()).doubleValue();
+	    holdingI = Double.valueOf(st.nextToken()).doubleValue();
+	    gresistance = Double.valueOf(st.nextToken()).doubleValue();
 	} catch (Exception e) {
 	}
 	setup();
     }
+
     void setDefaults() {
 	gresistance = 50;
 	holdingI = .0082;
 	triggerI = .01;
     }
+
     void setup() {
 	diode = new Diode(sim);
 	diode.setupForDefaultModel();
 	aresistance = 1; // to avoid divide by zero
     }
-    boolean nonLinear() { return true; }
+
+    boolean nonLinear() {
+	return true;
+    }
+
     void reset() {
 	volts[anode] = volts[cnode] = volts[gnode] = 0;
 	diode.reset();
 	lastvag = lastvac = curcount_a = curcount_c = curcount_g = 0;
     }
-    int getDumpType() { return 177; }
-    String dump() {
-	return super.dump() + " " + (volts[anode]-volts[cnode]) + " " +
-	    (volts[anode]-volts[gnode]) + " " + triggerI + " "+  holdingI + " " +
-	    gresistance;
+
+    int getDumpType() {
+	return 177;
     }
+
+    String dump() {
+	return super.dump() + " " + (volts[anode] - volts[cnode]) + " " + (volts[anode] - volts[gnode]) + " " + triggerI
+		+ " " + holdingI + " " + gresistance;
+    }
+
     double ia, ic, ig, curcount_a, curcount_c, curcount_g;
     double lastvac, lastvag;
     double gresistance, triggerI, holdingI;
@@ -86,22 +96,25 @@ class SCRElm extends CircuitElm {
     final int hs = 8;
     Polygon poly;
     Point cathode[], gate[];
-	
-    boolean applyGateFix() { return (flags & FLAG_GATE_FIX) != 0; }
-    
+
+    boolean applyGateFix() {
+	return (flags & FLAG_GATE_FIX) != 0;
+    }
+
     void setPoints() {
 	super.setPoints();
 	int dir = 0;
 	if (abs(dx) > abs(dy)) {
-	    dir = -sign(dx)*sign(dy);
-	    
-	    // correct dn (length) or else calcLeads() may get confused, and also gate may be drawn weirdly.  Can't do this with old circuits or it may
+	    dir = -sign(dx) * sign(dy);
+
+	    // correct dn (length) or else calcLeads() may get confused, and also gate may
+	    // be drawn weirdly. Can't do this with old circuits or it may
 	    // break them
 	    if (applyGateFix())
 		dn = abs(dx);
 	    point2.y = point1.y;
 	} else {
-	    dir = sign(dy)*sign(dx);
+	    dir = sign(dy) * sign(dx);
 	    if (applyGateFix())
 		dn = abs(dy);
 	    point2.x = point1.x;
@@ -116,19 +129,20 @@ class SCRElm extends CircuitElm {
 	poly = createPolygon(pa[0], pa[1], lead2);
 
 	gate = newPointArray(2);
-	double leadlen = (dn-16)/2;
+	double leadlen = (dn - 16) / 2;
 	int gatelen = sim.gridSize;
 	gatelen += leadlen % sim.gridSize;
 	if (leadlen < gatelen) {
-	    x2 = x; y2 = y;
+	    x2 = x;
+	    y2 = y;
 	    return;
 	}
-	interpPoint(lead2, point2, gate[0], gatelen/leadlen, gatelen*dir);
-	interpPoint(lead2, point2, gate[1], gatelen/leadlen, sim.gridSize*2*dir);
+	interpPoint(lead2, point2, gate[0], gatelen / leadlen, gatelen * dir);
+	interpPoint(lead2, point2, gate[1], gatelen / leadlen, sim.gridSize * 2 * dir);
 	gate[1].x = sim.snapGrid(gate[1].x);
 	gate[1].y = sim.snapGrid(gate[1].y);
     }
-	
+
     void draw(Graphics g) {
 	setBbox(point1, point2, hs);
 	adjustBbox(gate[0], gate[1]);
@@ -144,14 +158,14 @@ class SCRElm extends CircuitElm {
 	g.fillPolygon(poly);
 
 	setVoltageColor(g, volts[gnode]);
-	drawThickLine(g, lead2,   gate[0]);
+	drawThickLine(g, lead2, gate[0]);
 	drawThickLine(g, gate[0], gate[1]);
-	
+
 	// draw thing arrow is pointing to
 	setVoltageColor(g, v2);
 	setPowerColor(g, true);
 	drawThickLine(g, cathode[0], cathode[1]);
-	
+
 	curcount_a = updateDotCount(ia, curcount_a);
 	curcount_c = updateDotCount(ic, curcount_c);
 	curcount_g = updateDotCount(ig, curcount_g);
@@ -159,20 +173,20 @@ class SCRElm extends CircuitElm {
 	    drawDots(g, point1, lead2, curcount_a);
 	    drawDots(g, point2, lead2, curcount_c);
 	    drawDots(g, gate[1], gate[0], curcount_g);
-	    drawDots(g, gate[0], lead2, curcount_g+distance(gate[1], gate[0]));
+	    drawDots(g, gate[0], lead2, curcount_g + distance(gate[1], gate[0]));
 	}
-	
+
 	if ((needsHighlight() || sim.dragElm == this) && point1.x == point2.x && point2.y > point1.y) {
 	    g.setColor(whiteColor);
 	    int ds = sign(dx);
-	    g.drawString("C", lead2.x+((ds < 0) ? 5 : -15), lead2.y+12);
-	    g.drawString("A", lead1.x+5, lead1.y-4); // x+6 if ds=1, -12 if -1
-	    g.drawString("G", gate[0].x, gate[0].y+12);
+	    g.drawString("C", lead2.x + ((ds < 0) ? 5 : -15), lead2.y + 12);
+	    g.drawString("A", lead1.x + 5, lead1.y - 4); // x+6 if ds=1, -12 if -1
+	    g.drawString("G", gate[0].x, gate[0].y + 12);
 	}
-	
+
 	drawPosts(g);
     }
-	
+
     double getCurrentIntoNode(int n) {
 	if (n == anode)
 	    return -ia;
@@ -181,18 +195,24 @@ class SCRElm extends CircuitElm {
 	return -ig;
     }
 
-    
     Point getPost(int n) {
 	return (n == 0) ? point1 : (n == 1) ? point2 : gate[1];
     }
-	
-    int getPostCount() { return 3; }
-    int getInternalNodeCount() { return 1; }
+
+    int getPostCount() {
+	return 3;
+    }
+
+    int getInternalNodeCount() {
+	return 1;
+    }
+
     double getPower() {
-	return (volts[anode]-volts[gnode])*ia + (volts[cnode]-volts[gnode])*ic;
+	return (volts[anode] - volts[gnode]) * ia + (volts[cnode] - volts[gnode]) * ic;
     }
 
     double aresistance;
+
     void stamp() {
 	sim.stampNonLinear(nodes[anode]);
 	sim.stampNonLinear(nodes[cnode]);
@@ -203,38 +223,42 @@ class SCRElm extends CircuitElm {
     }
 
     void doStep() {
-	double vac = volts[anode]-volts[cnode]; // typically negative
-	double vag = volts[anode]-volts[gnode]; // typically positive
-	if (Math.abs(vac-lastvac) > .01 ||
-	    Math.abs(vag-lastvag) > .01)
+	double vac = volts[anode] - volts[cnode]; // typically negative
+	double vag = volts[anode] - volts[gnode]; // typically positive
+	if (Math.abs(vac - lastvac) > .01 || Math.abs(vag - lastvag) > .01)
 	    sim.converged = false;
 	lastvac = vac;
 	lastvag = vag;
-	diode.doStep(volts[inode]-volts[cnode]);
-	double icmult = 1/triggerI;
-	double iamult = 1/holdingI - icmult;
-	//System.out.println(icmult + " " + iamult);
-	aresistance = (-icmult*ic + ia*iamult > 1) ? .0105 : 10e5;
-	//System.out.println(vac + " " + vag + " " + sim.converged + " " + ic + " " + ia + " " + aresistance + " " + volts[inode] + " " + volts[gnode] + " " + volts[anode]);
+	diode.doStep(volts[inode] - volts[cnode]);
+	double icmult = 1 / triggerI;
+	double iamult = 1 / holdingI - icmult;
+	// System.out.println(icmult + " " + iamult);
+	aresistance = (-icmult * ic + ia * iamult > 1) ? .0105 : 10e5;
+	// System.out.println(vac + " " + vag + " " + sim.converged + " " + ic + " " +
+	// ia + " " + aresistance + " " + volts[inode] + " " + volts[gnode] + " " +
+	// volts[anode]);
 	sim.stampResistor(nodes[anode], nodes[inode], aresistance);
     }
+
     void getInfo(String arr[]) {
 	arr[0] = "SCR";
-	double vac = volts[anode]-volts[cnode];
-	double vag = volts[anode]-volts[gnode];
-	double vgc = volts[gnode]-volts[cnode];
+	double vac = volts[anode] - volts[cnode];
+	double vag = volts[anode] - volts[gnode];
+	double vgc = volts[gnode] - volts[cnode];
 	arr[1] = "Ia = " + getCurrentText(ia);
 	arr[2] = "Ig = " + getCurrentText(ig);
 	arr[3] = "Vac = " + getVoltageText(vac);
 	arr[4] = "Vag = " + getVoltageText(vag);
 	arr[5] = "Vgc = " + getVoltageText(vgc);
-        arr[6] = "P = " + getUnitText(getPower(), "W");
+	arr[6] = "P = " + getUnitText(getPower(), "W");
     }
+
     void calculateCurrent() {
-	ig = (volts[gnode]-volts[cnode])/gresistance;
-	ia = (volts[anode]-volts[inode])/aresistance;
-	ic = -ig-ia;
+	ig = (volts[gnode] - volts[cnode]) / gresistance;
+	ia = (volts[anode] - volts[inode]) / aresistance;
+	ic = -ig - ia;
     }
+
     public EditInfo getEditInfo(int n) {
 	if (n == 0)
 	    return new EditInfo("Trigger Current (A)", triggerI, 0, 0);
@@ -244,6 +268,7 @@ class SCRElm extends CircuitElm {
 	    return new EditInfo("Gate Resistance (ohms)", gresistance, 0, 0);
 	return null;
     }
+
     public void setEditValue(int n, EditInfo ei) {
 	if (n == 0 && ei.value > 0)
 	    triggerI = ei.value;
@@ -253,4 +278,3 @@ class SCRElm extends CircuitElm {
 	    gresistance = ei.value;
     }
 }
-
